# synth-utils-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: adsr_plot.rs  glide_plot.rs  lfo_plot.rs  quantizer_plot.rs  ribbon_plot.rs
examples/stm32f103_examples/: Cargo.toml  README.md  memory.x
examples/stm32f103_examples/.cargo/: config
examples/stm32f103_examples/examples/: adsr_pwm_loop.rs  lfo_pwm_loop.rs  midi_pwm_write.rs  ribbon_pwm_write.rs
non_rust_utils/: lookup_table_gen.py
src/: adsr.rs  glide_processor.rs  lfo.rs  lib.rs  lookup_tables.rs  mono_midi_receiver.rs  phase_accumulator.rs  quantizer.rs  ribbon_controller.rs  utils.rs
