[package]
name = "synth-utils"
version = "0.1.1"
edition = "2021"
authors = ["Jordan Aceto <jordanaceto@gmail.com>"]
license = "MIT"
description = "Music synthesizer utilities and modulation sources"
repository = "https://github.com/JordanAceto/synth-utils-rs"
categories = ["embedded", "multimedia::audio", "no-std"]
keywords = ["audio", "synth", "adsr", "lfo"]
readme = "README.md"

[dependencies]
heapless = "0.7"
midi-convert = "0.1"
biquad = "0.4"

[dev-dependencies]
plotters = "0.3.1"
